# asm56k

./: .gitignore  Makefile
docs/: readme.txt  todo.txt
src/: CodeUtils.c  CodeUtils.h  ConvertFields.c  ConvertFields.h  ErrorMessages.c  ErrorMessages.h  Lexer.l  MacroProxy.c  MacroProxy.h  OutputEmbededAsm.c  OutputEmbededAsm.h  OutputEmbededC.c  OutputLod.c  OutputLod.h  OutputP56.c  OutputP56.h  Parser.y  PipeLineRestriction.c  StringBuffer.c  StringBuffer.h  SymbolTable.c  SymbolTable.h  TokenStream.c  TokenStream.h  Value.c  Value.h  asm_types.h  export.h  main.c
src/codegen/: GenArith.c  GenArith.h  GenBitOps.c  GenBitOps.h  GenMisc.c  GenMisc.h  GenParMoves.c  GenParMoves.h
src/opt/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  configure.in  opt.info  opt.info-1  opt.info-2  opt.spec  opt.spec.in  opt.texi  texinfo.tex  version.texi
src/opt/ext/: Makefile.am  Opt.pm  tkopt
src/opt/src/: Makefile.am  ag.c  ag.h  buildfiles  makeopth.pl  opt.h  opt_menu.c  opt_num.c  opt_p.h  opt_proc.c  opt_reg.c  opt_regcc.cc  opt_regt.c  opt_sf.h  opt_util.c
src/opt/test/: Makefile.am  birthday.c  checkopt  checkoptcc  hooktest.c  iloop.c  manyopts.c  t_num.c  tarray.c  testcc.cc  testlong.c  testmain.c  testopt.c  testtypes.c  tnull.c  tstring.c
test/: test_all_instructions.asm  test_conditional.asm  test_data_3.asm  test_expressions.asm  test_freestyle_001.asm  test_freestyle_002.asm  test_include_fail.asm  test_lmem.asm  test_math.asm
tools/: cldlod.c  dsp56k-strip.c  lod2p56.c  tiohist.c
